--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
         <item>Go to sleep</item>
     </string-array>
 
+    <string name="todos">Todos</string>
+    <string name="next">Next</string>
+    <string name="prev">Prev</string>
+
 </resources>
